--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
@@ -688,7 +688,7 @@
                        
                    </div>
                     <div class="modal-footer col-md-12">
-             <a id="Guardar" class="fa fa-save btn btn-info" role="button"> Guardar</a>  
+             <a id="Guardar" class="fa fa-save btn btn-info" role="button"> Generar Horario Docente</a>  
                                      </div>
               </div>
                                        
