--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
@@ -491,7 +491,7 @@
                     
                     var obj_data = {'arrMaterias': myArray,'contador': cont};
                     //var obj_data = {};
-                              console.log(obj_data);
+                              //console.log(obj_data);
                     var jumpAction = '{{path('admin_generacion_horario_docente_grabar')}}';
                                  var modelessSetMatricula;
                                   $.ajax({
