--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/generacion_horario_admin.html.twig
@@ -485,10 +485,12 @@
                       i = i+1;
                       
                     }
+                    if(resultado == ""){
+                                        
+                     return false;
+                    }
                      arrValores["Horario"]=resultado;
-                     myArray[index]=arrValores; 
-                   
-                    
+                     myArray[index]=arrValores;  
                     var obj_data = {'arrMaterias': myArray,'contador': cont};
                     //var obj_data = {};
                               //console.log(obj_data);
