--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -110,7 +110,7 @@
                 <li><a href="{{path('admin_generacion_horarios_examenes')}}"><i class="fa fa-circle-o"></i> Generacion Horarios Examen </a></li>
               {% endif %}
               {% if event.id_sg_opcion == SubirSolicitudes %}
-                <li><a href="{{path('admin_elegir_solicitud')}}"></i> Subir Solicitudes </a></li>
+                <li><a href="{{path('admin_elegir_solicitud')}}"><i class="fa fa-circle-o"></i> Subir Solicitudes </a></li>
               {% endif %}
               {% if event.id_sg_opcion == ConsultaHorariosClases %}
                 <li><a href="{{path('admin_consulta_horarios')}}"><i class="fa fa-circle-o"></i> Consulta Horarios Clases </a></li>
