--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/editarPerfil.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/editarPerfil.html.twig
@@ -264,7 +264,7 @@
                         <div class="col-xs-8">
                            <div id="espacioInputFile" class="fileUpload btn btn-primary">
                               <span>Seleccionar Foto</span>
-                              <input id="imagen_perfil" name="imagen_perfil" type="file" placeholder="Foto" class="pull-right form-control upload" style="padding: 0 7px;" accept=".jpg,.png"/>
+                              <input id="imagen_perfil" name="imagen_perfil" type="file" placeholder="Foto" class="pull-right form-control upload" style="padding: 0 7px;" accept="image/jpg,image/png,image/jpeg,image/gif" />
                            </div>
                            <div id="previewImg">
                                  <div>Vista Preliminar:</div>
@@ -448,7 +448,7 @@
                success:  function (dataResponse) {
                   var mensajeResultado = '';
                   if(dataResponse.idMensaje==='1') {
-                     mensajeResultado = 'Su información de actualizó correctamente.';
+                     mensajeResultado = 'Su información de perfil se actualizó correctamente.';
                      if(dataResponse.imagenGrabada === 0 || dataResponse.imagenGrabada === -1) {
                         mensajeResultado += "<br><br><b>Atención:<b> Se presentaron problemas para actualizar su foto de perfil.";
                      }
